[release-later] Set `sonar.java.enablePreview` property automatically (#124)